FIX icon on social media buttons also visible when hovered

--- a/_assets/stylesheets/modules/_contact.scss
+++ b/_assets/stylesheets/modules/_contact.scss
@@ -68,7 +68,7 @@
 
 			&:hover {
 				border: none;
-				background: $geildanke-color-lighter;
+				background-color: $geildanke-color-lighter;
 			}
 		}
 	}
